--- a/src/pages/QIILandingPage.css
+++ b/src/pages/QIILandingPage.css
@@ -162,7 +162,7 @@
 		display        : flex;
 		justify-content: center;
 		align-items    : flex-end;
-		padding        : 1.8rem 0;
+		padding        : 0;
 	}
 
 	.video-text-cnt {
