--- a/src/pages/FinancingResilience.css
+++ b/src/pages/FinancingResilience.css
@@ -1,4 +1,4 @@
-/* .FinancingResilience .list-title {
+.FinancingResilience .list-title {
   font-size: 1.25rem;
   margin-bottom: 1.25rem;
 }
@@ -179,7 +179,7 @@
 
 .FinancingResilience .num1-para{
 	font-style: italic;
-} */
+}
 
 .FinancingResilience .list-title {
   font-size: 1.25rem;
