--- a/src/components/FAQ.css
+++ b/src/components/FAQ.css
@@ -144,7 +144,7 @@
 
 	.faq .right-box {
 		width     : 70%;
-		padding   : 9.4rem 3.6rem;
+		padding   : 9.4rem 3.6rem 4.4rem 3.6rem;
 		min-height: 100vh;
 	}
 
