--- a/src/pages/QIILandingPage.css
+++ b/src/pages/QIILandingPage.css
@@ -99,6 +99,15 @@
 	text-align: center;
 	margin    : 2rem auto;
 	max-width : 230px;
+	position: relative;
+	padding-bottom: 4rem;
+}
+
+.subpage-cnt a {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 .label-subpage {
