--- a/src/pages/QII3LandingPage.css
+++ b/src/pages/QII3LandingPage.css
@@ -254,3 +254,13 @@
     padding: 0.35rem 1rem;
   }
 }
+ 
+@media (min-width: 1200px) {
+    .sub-pages {
+        margin: 0.3rem 0;
+    }
+}
+
+.qii2 .mBottom {
+    margin-bottom: 0.85rem;
+} 
