--- a/src/components/Header3.css
+++ b/src/components/Header3.css
@@ -1,180 +1,187 @@
 .Header3 {
-	position: relative;
+  position: relative;
 }
 
 .header3-bg {
-	position           : relative;
-	height             : 200px;
-	background-size    : cover;
-	background-repeat  : no-repeat;
-	background-position: center;
+  position: relative;
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .Header3 .desk-title {
-	display: none;
+  display: none;
 }
 
 .Header3 .mob-title {
-	position       : relative;
-	z-index        : 2;
-	position       : absolute;
-	inset          : 0;
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	color          : #fff;
+  position: relative;
+  z-index: 2;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  padding-bottom: 1rem;
+  color: #fff;
 }
 
-
-
 .Header3 .header-overlay {
-	width     : 100%;
-	height    : 100%;
-	background: transparent linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, RGBA(0, 0, 0, 0.4) 100%) 0% 0% no-repeat padding-box;
-	position  : absolute;
-	inset     : 0;
-	z-index   : 1;
+  width: 100%;
+  height: 100%;
+  background: transparent
+    linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, RGBA(0, 0, 0, 0.4) 100%) 0% 0%
+    no-repeat padding-box;
+  position: absolute;
+  inset: 0;
+  z-index: 1;
 }
 
 .bold-text {
-	margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .Header3 .footer {
-	max-width: 1350px;
+  max-width: 1350px;
 }
 
 @media (max-width: 649px) {
-	.Header3 .container {
-		position      : relative;
-		z-index       : 2;
-		color         : #000;
-		padding-top   : 1rem;
-		padding-bottom: 0;
-	}
+  .Header3 .container {
+    position: relative;
+    z-index: 2;
+    color: #000;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .Header3 .header-overlay {
+    background: transparent
+      linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, RGBA(0, 0, 0, 0.8) 100%) 0%
+      0% no-repeat padding-box;
+  }
 }
 
 @media (min-width: 650px) {
-	.header3-bg {
-		height: 400px;
-	}
+  .header3-bg {
+    height: 400px;
+  }
 
-	.Header3 .mob-title {
-		display: none;
-	}
+  .Header3 .mob-title {
+    display: none;
+  }
 
-	.Header3 .header-title {
-		position: static;
-	}
+  .Header3 .header-title {
+    position: static;
+  }
 
-	.Header3 .desk-title {
-		display    : inline;
-		text-shadow: 1px 1px 20px #000, 1px 1px 39px #000;
-	}
+  .Header3 .desk-title {
+    display: inline;
+    text-shadow: 1px 1px 20px #000, 1px 1px 39px #000;
+  }
 
-	.Header3 .container {
-		position       : absolute;
-		z-index        : 3;
-		color          : #ffffff;
-		padding        : 3rem;
-		inset          : 0;
-		text-align     : center;
-		display        : flex;
-		flex-direction : column;
-		justify-content: space-between;
-	}
+  .Header3 .container {
+    position: absolute;
+    z-index: 3;
+    color: #ffffff;
+    padding: 6rem 1rem 1rem 1rem;
+    inset: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-	.Header3 .footer {
-		font-size: 1rem;
-	}
+  .Header3 .footer {
+    font-size: 1rem;
+  }
 
-	.Header3 .header-overlay {
-		background: transparent linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 53%, #000000E3 100%) 0% 0% no-repeat padding-box;
+  .Header3 .header-overlay {
+    background: transparent
+      linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.6) 53%,
+        #000000e3 100%
+      )
+      0% 0% no-repeat padding-box;
+  }
 
-	}
-
-	.bold-text {
-		margin-top: 1.5rem;
-	}
+  .bold-text {
+    margin-top: 1.5rem;
+  }
 }
 
 @media (min-width: 768px) {
-	.Header3 .footer {
-		font-size: 1.25rem;
-		max-width: 85%;
-		margin   : 0 auto;
-	}
+  .Header3 .footer {
+    font-size: 1.1rem;
+    max-width: 90%;
+    margin: 0 auto;
+  }
 
-	.Header3 .container {
-		padding: 3rem;
-	}
-
+  .Header3 .container {
+    padding: 8rem 1rem 2rem 1rem;
+  }
 }
 
 @media (min-width: 992px) {
-	.Header3 {
-		height    : 100vh;
-		max-height: 800px;
-	}
+  .Header3 {
+    height: 100vh;
+    max-height: 800px;
+  }
 
-	.header3-bg {
-		height    : 100vh;
-		max-height: 800px;
-	}
+  .header3-bg {
+    height: 100vh;
+    max-height: 800px;
+  }
 
-	.Header3 .footer {
-		max-width: 80%;
-	}
-
-	.Header3 .container {
-		padding: 6rem 3rem;
-	}
-
-	/* .Header3 .container {
-		padding: 9rem 2rem;
-	} */
-
+  .Header3 .footer {
+    max-width: 80%;
+  }
+  .Header3 .container {
+    padding: 9rem 2rem 3rem 2rem;
+  }
 }
 
 @media (min-width: 1024px) {
-	.Header3 .footer {
-		font-size: 1.25rem;
-	}
+  .Header3 .footer {
+    font-size: 1.25rem;
+  }
 
-	.Header3 .header-title {
-		font-size: 3.4375rem;
-	}
+  .Header3 .header-title {
+    font-size: 3rem;
+    line-height: 3.5rem;
+  }
 }
 
 @media (min-width: 1200px) {
-	.Header3 .footer {
-		font-size: 1.5625rem;
-	}
+  .Header3 .footer {
+    font-size: 1.3rem;
+  }
 }
 
 @media (min-width: 1400px) {
-	.Header3 .footer {
-		font-size  : 1.875rem;
-		line-height: 2.1875rem;
-	}
+  .Header3 .footer {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 
-	.Header3 .header-title {
-		font-size: 4.375rem;
-	}
+  .Header3 .header-title {
+    font-size: 3.5rem;
+    line-height: 5rem;
+  }
 
-	.Header3 {
-		height    : 100vh;
-		max-height: none;
-	}
+  .Header3 {
+    height: 100vh;
+    max-height: none;
+  }
 
-	.header3-bg {
-		height    : 100vh;
-		max-height: none;
-	}
+  .header3-bg {
+    height: 100vh;
+    max-height: none;
+  }
 
-	.Header3 .container {
-		padding   : 16rem 3rem;
-		min-height: 630px;
-		gap       : 50px
-	}
+  .Header3 .container {
+    padding: 8rem 3rem 4rem 3rem;
+    min-height: 630px;
+    gap: 50px;
+  }
 }
