--- a/src/components/HeaderCarousal.css
+++ b/src/components/HeaderCarousal.css
@@ -1,284 +1,295 @@
 .Header4 {
-	position: relative;
-	width   : 100vw;
+  position: relative;
+  width: 100vw;
 }
 
 .slideshow-container {
-	width   : 100%;
-	position: relative;
+  width: 100%;
+  position: relative;
 }
 
 .slider-wrapper-cnt {
-	width   : 100vw;
-	overflow: hidden;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .slider-wrapper {
-	display   : flex;
-	transition: transform 1s ease-in-out;
+  display: flex;
+  transition: transform 1s ease-in-out;
 }
 
 .Header4-bg {
-	position           : relative;
-	height             : 200px;
-	background-size    : cover;
-	background-repeat  : no-repeat;
-	background-position: center;
+  position: relative;
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .Header4 .desk-title {
-	display: none;
+  display: none;
 }
 
 .Header4 .mob-title {
-	position       : relative;
-	z-index        : 2;
-	position       : absolute;
-	inset          : 0;
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	color          : #fff;
+  position: relative;
+  z-index: 2;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  color: #fff;
+  padding-bottom: 1rem;
 }
 
-
-
 .Header4 .header-overlay {
-	width     : 100%;
-	height    : 100%;
-	background: transparent linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, RGBA(0, 0, 0, 0.4) 100%) 0% 0% no-repeat padding-box;
-	position  : absolute;
-	inset     : 0;
-	z-index   : 1;
+  width: 100%;
+  height: 100%;
+  background: transparent
+    linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, RGBA(0, 0, 0, 0.4) 100%) 0% 0%
+    no-repeat padding-box;
+  position: absolute;
+  inset: 0;
+  z-index: 1;
 }
 
 .bold-text {
-	margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .Header4 .footer {
-	max-width: 1350px;
+  max-width: 1350px;
 }
 
 .header-carousel-footer {
-	display        : flex;
-	justify-content: space-between;
-	align-items    : center;
-	margin         : 0 auto 0;
-	max-width      : 400px;
-	padding        : 0 25px;
-
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto 0;
+  max-width: 400px;
+  padding: 0 25px;
 }
 
 .header-carousel-btn {
-	background     : #fff;
-	color          : #000;
-	border         : none;
-	font-size      : 1.2rem;
-	border-radius  : 50%;
-	width          : 40px;
-	height         : 40px;
-	display        : flex;
-	justify-content: center;
-	align-items    : center;
-	cursor         : pointer;
-	z-index        : 10;
-	box-shadow     : 0px 10px 30px rgba(0, 0, 0, 0.16);
-	flex-shrink    : 0
+  background: #fff;
+  color: #000;
+  border: none;
+  font-size: 1.2rem;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 10;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.16);
+  flex-shrink: 0;
 }
 
 .header-carousel-btn:disabled {
-	background: #ccc;
-	cursor    : not-allowed;
-	color     : #A3A3A3;
+  background: #ccc;
+  cursor: not-allowed;
+  color: #a3a3a3;
 }
 
 .header-carousel-dots {
-	display        : flex;
-	gap            : 0.5rem;
-	align-items    : center;
-	justify-content: center;
-	width          : 100%;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .header-carousel-dots .dot {
-	width        : 20px;
-	height       : 6px;
-	background   : #A3A3A3;
-	border-radius: 6px;
-	cursor       : pointer;
-	transition   : background 0.3s;
+  width: 20px;
+  height: 6px;
+  background: #a3a3a3;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
 .header-carousel-dots .dot.active {
-	background: var(--color-primary);
+  background: var(--color-primary);
 }
 
 @media (max-width: 649px) {
-	.Header4 .container {
-		position   : relative;
-		z-index    : 2;
-		color      : #000;
-		padding-top: 1rem;
-	}
+  .Header4 .container {
+    position: relative;
+    z-index: 2;
+    color: #000;
+    padding-top: 1rem;
+  }
+
+  .Header4 .header-overlay {
+    background: transparent
+      linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, RGBA(0, 0, 0, 0.8) 100%) 0%
+      0% no-repeat padding-box;
+  }
 }
 
 @media (min-width: 650px) {
-	.Header4-bg {
-		height: 400px;
-	}
+  .Header4-bg {
+    height: 400px;
+  }
 
-	.Header4 .mob-title {
-		display: none;
-	}
+  .Header4 .mob-title {
+    display: none;
+  }
 
-	.Header4 .header-title {
-		position: static;
-	}
+  .Header4 .header-title {
+    position: static;
+  }
 
-	.Header4 .desk-title {
-		display    : inline;
-		text-shadow: 1px 1px 20px #000, 1px 1px 39px #000;
-	}
+  .Header4 .desk-title {
+    display: inline;
+    text-shadow: 1px 1px 20px #000, 1px 1px 39px #000;
+  }
 
-	.Header4 .container {
-		position       : absolute;
-		z-index        : 3;
-		color          : #ffffff;
-		padding        : 3rem;
-		inset          : 0;
-		text-align     : center;
-		display        : flex;
-		flex-direction : column;
-		justify-content: space-between;
-	}
+  .Header4 .container {
+    position: absolute;
+    z-index: 3;
+    color: #ffffff;
+    padding: 3rem;
+    inset: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-	.Header4 .footer {
-		font-size: 1rem;
-	}
+  .Header4 .footer {
+    font-size: 1rem;
+  }
 
-	.Header4 .header-overlay {
-		background: transparent linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 53%, #000000E3 100%) 0% 0% no-repeat padding-box;
+  .Header4 .header-overlay {
+    background: transparent
+      linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.6) 53%,
+        #000000e3 100%
+      )
+      0% 0% no-repeat padding-box;
+  }
 
-	}
+  .bold-text {
+    margin-top: 1.5rem;
+  }
 
-	.bold-text {
-		margin-top: 1.5rem;
-	}
-
-
-	.header-carousel-footer {
-		margin-top: 1rem;
-	}
+  .header-carousel-footer {
+    margin-top: 1rem;
+  }
 }
 
 @media (min-width: 768px) {
-	.Header4 .footer {
-		font-size: 1.25rem;
-		max-width: 85%;
-		margin   : 0 auto;
-	}
+  .Header4 .footer {
+    font-size: 1.25rem;
+    max-width: 85%;
+    margin: 0 auto;
+  }
 
-	.Header4 .container {
-		padding: 3rem;
-	}
+  .Header4 .container {
+    padding: 3rem;
+  }
 
-	.header4-nav-spacer {
-		height: 50px;
-	}
+  .header4-nav-spacer {
+    height: 50px;
+  }
 }
 
 @media (min-width: 992px) {
-	.Header4 {
-		height    : 100vh;
-		max-height: 800px;
-	}
+  .Header4 {
+    height: 100vh;
+    max-height: 800px;
+  }
 
-	.header4-nav-spacer {
-		height: 0;
-	}
+  .header4-nav-spacer {
+    height: 0;
+  }
 
-	.Header4-bg {
-		height    : 100vh;
-		max-height: 800px;
-	}
+  .Header4-bg {
+    height: 100vh;
+    max-height: 800px;
+  }
 
-	.Header4 .footer {
-		max-width: 80%;
-	}
+  .Header4 .footer {
+    max-width: 80%;
+  }
 
-	.Header4 .container {
-		padding: 6rem 3rem;
-	}
+  .Header4 .container {
+    padding: 6rem 3rem;
+  }
 
-	.header-carousel-footer {
-		position   : absolute;
-		bottom     : 30px;
-		z-index    : 10;
-		left       : 50%;
-		width      : 400px;
-		margin-left: -200px;
-		gap        : 20px;
-	}
+  .header-carousel-footer {
+    position: absolute;
+    bottom: 30px;
+    z-index: 10;
+    left: 50%;
+    width: 400px;
+    margin-left: -200px;
+    gap: 20px;
+  }
 
-	.header-carousel-dots .dot {
-		height       : 8px;
-		width        : 50px;
-		border-radius: 6px;
-	}
+  .header-carousel-dots .dot {
+    height: 8px;
+    width: 50px;
+    border-radius: 6px;
+  }
 
-	.header-carousel-dots {
-		background-color: rgba(255, 255, 255, 0.3);
-		width           : 305px;
-		height          : 30px;
-		border-radius   : 15px;
-	}
+  .header-carousel-dots {
+    background-color: rgba(255, 255, 255, 0.3);
+    width: 305px;
+    height: 30px;
+    border-radius: 15px;
+  }
 
-	.header-carousel-btn {
-		width : 50px;
-		height: 50px;
-	}
+  .header-carousel-btn {
+    width: 50px;
+    height: 50px;
+  }
 }
 
 @media (min-width: 1024px) {
-	.Header4 .footer {
-		font-size: 1.25rem;
-	}
+  .Header4 .footer {
+    font-size: 1.25rem;
+  }
 
-	.Header4 .header-title {
-		font-size: 3.4375rem;
-	}
+  .Header4 .header-title {
+    font-size: 3.4375rem;
+  }
 }
 
 @media (min-width: 1200px) {
-	.Header4 .footer {
-		font-size: 1.5625rem;
-	}
+  .Header4 .footer {
+    font-size: 1.5625rem;
+  }
 }
 
 @media (min-width: 1400px) {
-	.Header4 .footer {
-		font-size  : 1.875rem;
-		line-height: 2.1875rem;
-	}
+  .Header4 .footer {
+    font-size: 1.875rem;
+    line-height: 2.1875rem;
+  }
 
-	.Header4 .header-title {
-		font-size: 4.375rem;
-	}
+  .Header4 .header-title {
+    font-size: 4.375rem;
+  }
 
-	.Header4 {
-		height    : 100vh;
-		max-height: none;
-	}
+  .Header4 {
+    height: 100vh;
+    max-height: none;
+  }
 
-	.Header4-bg {
-		height    : 100vh;
-		max-height: none;
-	}
+  .Header4-bg {
+    height: 100vh;
+    max-height: none;
+  }
 
-	.Header4 .container {
-		padding   : 9rem 3rem;
-		min-height: 630px;
-		gap       : 50px
-	}
+  .Header4 .container {
+    padding: 9rem 3rem;
+    min-height: 630px;
+    gap: 50px;
+  }
 }
