--- a/src/components/TopNavBar.css
+++ b/src/components/TopNavBar.css
@@ -40,7 +40,8 @@ nav .nav-cnt {
 
 .breadcrump button {
   border: none;
-  background: #ffffff;
+  background: transparent;
+  /* background: #ffffff; */
   color: blue;
   border-radius: 6rem;
   /* box-shadow: 0px 3px 6px #00000029; */
