--- a/src/pages/TechnicalSolutions.css
+++ b/src/pages/TechnicalSolutions.css
@@ -1,61 +1,59 @@
 @media (max-width: 649px) {
-	.technicalSolutions .Header3 .container {
-		padding-bottom: 0;
-	}
+  .technicalSolutions .Header3 .container {
+    padding-bottom: 0;
+  }
 
-	.container.noPTop {
-		padding-top: 1rem;
-	}
+  .container.noPTop {
+    padding-top: 1rem;
+  }
 }
 
 .link-text {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .technicalSolutions .border {
-	border: 1px dashed rgba(134, 134, 134, 0.5);
-	margin: 2rem 1rem;
+  border: 1px dashed rgba(134, 134, 134, 0.5);
+  margin: 2rem 1rem;
 }
 
 .VCard-cnt {
-	margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .v-small-text {
-	text-align: center;
-	margin    : 1rem 0 0 0;
-	font-size : 0.9375rem;
+  text-align: center;
+  margin: 1rem 0 0 0;
+  font-size: 0.9375rem;
 }
 
 @media (min-width: 1024px) {
-	.link-text {
-		text-align: center;
-		max-width : 90%;
-		margin    : 1rem auto;
-	}
+  .link-text {
+    text-align: center;
+    max-width: 90%;
+    margin: 1rem auto;
+  }
 
-	.technicalSolutions .mTop2 {
-		margin: 3rem 0;
-	}
+  .technicalSolutions .mTop2 {
+    margin: 3rem 0;
+  }
 }
 
 @media (min-width: 1400px) {
-	.link-text {
-		max-width: 90%;
-		margin   : 1rem auto;
-		font-size: 1.875rem;
-	}
+  .link-text {
+    max-width: 90%;
+    margin: 1rem auto;
+    font-size: 1.5rem !important;
+  }
 
-	.technicalSolutions .mTop2 {
-		margin: 3rem 0;
-	}
+  .technicalSolutions .mTop2 {
+    margin: 3rem 0;
+  }
 }
 
 @media (min-width: 1600px) {
-	.link-text {
-		max-width: 1480px;
-		margin   : 1rem auto;
-	}
-
-
+  .link-text {
+    max-width: 1480px;
+    margin: 1rem auto;
+  }
 }
